--- a/task-03.html
+++ b/task-03.html
@@ -14,6 +14,21 @@
             color: #424242;
             line-height: 1.5;
         }
+
+        li {
+            list-style: none;
+            padding: 25px;
+            background-color: #edf3fc;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
+            border-radius: 3px;  
+        }
+
+        #gallery {
+            display: flex;
+            justify-content: space-around;
+            
+        }
+        
     </style>
 </head>
 
