--- a/task-03.html
+++ b/task-03.html
@@ -18,15 +18,23 @@
         li {
             list-style: none;
             padding: 25px;
-            background-color: #edf3fc;
+            background-color: #edf3fc; 
             box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
-            border-radius: 3px;  
+            border-radius: 3px; 
+            display: grid; 
         }
 
         #gallery {
-            display: flex;
-            justify-content: space-around;
-            
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 15px;
+            /* grid-template-columns: repeat(auto-fit, 350px); */
+            grid-column-gap: 30px;
+            /* display: flex;
+            justify-content: space-around; */
+        }
+        img{
+            justify-self: center;
+            align-self: center;
         }
         
     </style>
